# bazel-rules-jemalloc

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
bazel/: deps.bazel  deps.bzl  do_nothing.bzl  repos.bzl
